[package]
name = "card-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.1"

[lints.clippy]
enum_glob_use="deny"
pedantic="deny"
nursery="deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
